samples/_failures_safe/1761137599_60559c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69a13262.c: In function ‘main’:
./samples/SAFE/__tmp_69a13262.c:144:16: error: missing terminating " character
  144 |         printf("Failed to read second matrix\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_69a13262.c:144:9: error: expected expression at end of input
  144 |         printf("Failed to read second matrix\n
      |         ^~~~~~
./samples/SAFE/__tmp_69a13262.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_69a13262.c:144:9: error: expected declaration or statement at end of input
